Fixed hr element being too small

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ h2 {
 
 hr {
 	margin-left: -1.5%;
-	margin-right: 1.5%;
+	margin-right: -1.5%;
 }
 
 ::-webkit-scrollbar {
